fixed overlapping of nav components (#99)

--- a/_includes/scss/Navbar.module.scss
+++ b/_includes/scss/Navbar.module.scss
@@ -7,7 +7,7 @@ div.navbarContFluidScrolled {
 }
 
 div.navbarContFluid {
-  z-index: 40;
+  z-index: 45;
   position: sticky;
   width: 100%;
   top: 0;
